--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -1,3 +1,270 @@
 ---
 title: 'Variables'
 ---
+
+<p class="lead">Spruce comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
+
+Our central concept is not to expose a variable that isn’t needed for later customization, like the colors (for ```prefers-color-scheme```) or the transitions (for ```prefers-reduced-motion```).
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/variable/_index.scss)
+
+## Override Variables
+
+There are two types of variables: single one and map. All of them are overwriteable, expandable with ```@use```'s ```with``` option.
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $colors: (
+    base: (
+      primary-darkest: hsl(272, 100%, 9%),
+      heading: hsl(271deg, 100%, 9%)
+    ),
+    btn: (
+      new-background: hsl(0, 0%, 95%), // Expanded new color values for buttons.
+      new-background-hover: hsl(0, 0%, 90%),
+      new-foreground: hsl(0, 0%, 10%),
+    )
+  ),
+  $font-size-base: 1.063rem,
+  $font-size-ratio: 1.250,
+  $container-width: 86rem
+);
+```
+
+You must do the overwrite at the very first use of ```@use```.
+
+## CSS variables prefix
+
+Spruce use the prefix for generating the custom properties.
+
+```scss
+$prefix: 'spruce';
+```
+
+Generated CSS custom properties:
+
+```css
+:root {
+  --spruce-base-color-primary-darkest: #18002e;
+  --spruce-base-color-heading: #18002e;
+  --spruce-base-color-primary: #8660cd;
+  --spruce-base-color-secondary: #ffc2cc;
+}
+```
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/_root.scss)
+
+## Settings
+
+Control the main settings of Spruce through the ```$settings``` map.
+
+You can access any setting with the [setting() helper function](/docs/sass/functions#setting).
+
+```scss
+$settings:(
+  hyphens:  true, // Turn on/off the hyphenation
+);
+```
+
+## Colors
+
+We store the color values in a central map named ```$color```. It is a nested object separated by components.
+
+You can access any color with the [color() helper function](/docs/sass/functions#color).
+
+```scss
+$colors: (
+  base: (
+    primary: hsl(261, 52%, 59%),
+    secondary: hsl(350, 100%, 88%),
+    background: hsl(0, 0%, 100%),
+    heading: hsl(205, 100%, 2%),
+    text: hsl(208, 7%, 30%),
+    link: hsl(261, 52%, 59%),
+    link-hover: hsl(261, 52%, 35%),
+    border: hsl(0, 0%, 90%),
+    mark-background: hsl(50, 100%, 80%),
+    mark-color: hsl(205, 100%, 2%),
+    code-background: hsl(261, 52%, 95%),
+    code-color: hsl(205, 100%, 2%),
+    blockquote-border: hsl(261, 52%, 59%)
+  ),
+  alert: (
+    danger: hsl(2, 71%, 53%),
+    info: hsl(202, 100%, 37%),
+    success: hsl(160, 74%, 30%),
+    warning: hsl(40, 96%, 32%)
+  ),
+  btn: (
+    primary-background: hsl(261, 52%, 59%),
+    primary-background-hover: hsl(261, 52%, 40%),
+    primary-foreground: hsl(0, 0%, 100%),
+    secondary-background: hsl(350, 100%, 88%),
+    secondary-background-hover: hsl(350, 100%, 92%),
+    secondary-foreground: hsl(350, 100%, 20%)
+  ),
+  form: (
+    background: hsl(0, 0%, 100%),
+    background-disabled: hsl(0, 0%, 95%),
+    border: hsl(0, 0%, 90%),
+    border-disabled: hsl(0, 0%, 90%),
+    border-focus: hsl(261, 52%, 59%),
+    check-foreground: hsl(0, 0%, 100%),
+    check-background: hsl(261, 52%, 59%),
+    label: hsl(205, 100%, 2%),
+    legend: hsl(205, 100%, 2%),
+    placeholder: hsl(208, 7%, 40%),
+    text: hsl(208, 7%, 30%),
+    select-foreground: hsl(261, 52%, 59%)
+  ),
+  table: (
+    border: hsl(0, 0%, 90%),
+    hover: hsla(0, 0%, 0%, 0.05),
+    stripe: hsla(0, 0%, 0%, 0.025)
+  )
+);
+```
+
+## Spacers
+
+You can access any spacer with the [spacer() helper function](/docs/sass/functions#spacer).
+
+```scss
+$spacer: 1rem;
+
+$spacers: (
+  xxs:  $spacer * 0.25,
+  xs:   $spacer * 0.5,
+  s:    $spacer,
+  m:    $spacer * 1.5,
+  l:    $spacer * 3,
+  xl:   $spacer * 4.5,
+  xxl:  $spacer * 5,
+  xxxl: $spacer * 10
+);
+```
+
+## Display
+
+```scss
+$border-radius-sm: 0.25rem;
+$border-radius-lg: 0.5rem;
+```
+
+## Typography
+
+You can access any font size with the [font-size() helper function](/docs/sass/functions#font-size).
+
+```scss
+$font-size-ratio: 1.333;
+
+$font-size-base: 1rem;
+$font-size-sm: 0.9rem;
+$font-size-lg: 1.1rem;
+$font-size-lead: math.pow($font-size-ratio, 1) * $font-size-base;
+
+$font-sizes: ();
+$font-sizes: map.merge(
+  (
+    h1: math.pow($font-size-ratio, 4) * $font-size-base,
+    h2: math.pow($font-size-ratio, 3) * $font-size-base,
+    h3: math.pow($font-size-ratio, 2) * $font-size-base,
+    h4: math.pow($font-size-ratio, 1) * $font-size-base,
+    h5: $font-size-base,
+    h6: $font-size-base
+  ),
+  $font-sizes
+);
+
+$font-family-base: #{system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'};
+$font-family-heading: $font-family-base;
+$font-family-cursive: #{SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace};
+
+$line-height-sm: 1.2;
+$line-height-md: 1.5;
+$line-height-lg: 1.8;
+$line-height-base: $line-height-lg;
+$line-height-heading: calc(2px + 2ex + 2px);
+
+$inline-text-element-padding: 0.1em 0.3em;
+$inline-text-element-border-radius: $border-radius-sm;
+```
+
+### Forms
+
+```scss
+$form-label-font-size: null;
+$form-label-font-style: null;
+$form-label-font-weight: null;
+
+$btn-border-radius: $border-radius-sm;
+$btn-font-size: $font-size-base;
+$btn-font-size-sm: 0.8rem;
+$btn-font-size-lg: 1.15rem;
+$btn-font-style: null;
+$btn-font-weight: 500;
+$btn-padding: 0.75em 1em;
+$btn-padding-sm: 0.5em;
+$btn-padding-lg: 0.9em 1.15em;
+$btn-icon-size: 0.85em;
+
+$legend-font-size: clamp(#{map.get($font-sizes, 'h5')}, 5vw, #{map.get($font-sizes, 'h4')});
+$legend-font-weight: 700;
+
+$form-description-font-size: $font-size-base;
+$form-description-font-style: null;
+$form-description-font-weight: null;
+
+$form-row-col-width: 20ch;
+
+$form-control-font-size: $font-size-base;
+$form-control-font-weight: null;
+$form-control-line-height: 1.5;
+$form-control-padding: 0.5em 0.75em;
+$form-control-padding-sm: 0.25em 0.5em;
+$form-control-padding-lg: 0.75em 1em;
+$form-control-border-radius: $border-radius-sm;
+
+$select-icon-width: 1.25em;
+$select-icon-right-offset: 0.5em;
+$select-padding-right: calc(0.75em + $select-icon-width);
+$select-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12,12.692l-5.203,-5.203c-0.234,-0.234 -0.614,-0.234 -0.849,0l-1.272,1.273c-0.235,0.234 -0.235,0.614 -0,0.849l6.9,6.9c0.234,0.234 0.614,0.234 0.848,-0l6.9,-6.9c0.235,-0.235 0.235,-0.615 0,-0.849l-1.272,-1.273c-0.235,-0.234 -0.615,-0.234 -0.849,0l-5.203,5.203Z" style="fill:#{map.get($colors, form, select-foreground)};"/></svg>';
+
+$form-radio-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="6" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
+$form-checkbox-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M9.525,13.777l-2.411,-2.412c-0.234,-0.233 -0.613,-0.233 -0.846,0l-1.27,1.27c-0.233,0.233 -0.233,0.612 0,0.846l4.104,4.103c0.116,0.117 0.269,0.175 0.422,0.175l0.003,0c0.152,0 0.305,-0.058 0.421,-0.175l9.054,-9.053c0.233,-0.234 0.233,-0.613 -0,-0.846l-1.27,-1.269c-0.233,-0.234 -0.612,-0.234 -0.846,-0l-7.361,7.361Z" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
+$form-checkbox-indeterminate-image: '<svg viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M19.5,11.1c-0,-0.331 -0.269,-0.6 -0.6,-0.6l-13.8,0c-0.331,0 -0.6,0.269 -0.6,0.6l0,1.8c0,0.331 0.269,0.6 0.6,0.6l13.8,0c0.331,0 0.6,-0.269 0.6,-0.6l-0,-1.8Z" style="fill:#{map.get($colors, form, check-foreground)};"/></svg>';
+
+$form-valid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm-1.476,10.182l-2.984,-2.984c-0.065,-0.065 -0.17,-0.065 -0.235,0l-0.943,0.943c-0.065,0.065 -0.065,0.171 -0,0.236l4.043,4.042c0.033,0.033 0.076,0.05 0.119,0.049c0.044,0.001 0.087,-0.016 0.12,-0.049l6.994,-6.994c0.065,-0.065 0.065,-0.17 0,-0.235l-0.943,-0.943c-0.065,-0.065 -0.17,-0.065 -0.235,-0l-5.936,5.935Z" style="fill:#{map.get($colors, alert, success)};"/></svg>';
+$form-invalid-image: '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M12,2c5.519,0 10,4.481 10,10c0,5.519 -4.481,10 -10,10c-5.519,0 -10,-4.481 -10,-10c0,-5.519 4.481,-10 10,-10Zm0,1.667c4.599,-0 8.333,3.734 8.333,8.333c0,4.599 -3.734,8.333 -8.333,8.333c-4.599,0 -8.333,-3.734 -8.333,-8.333c-0,-4.599 3.734,-8.333 8.333,-8.333Zm0.813,11.649c-0,-0.081 -0.065,-0.146 -0.146,-0.146l-1.334,0c-0.081,0 -0.146,0.065 -0.146,0.146l0,1.169c0,0.08 0.065,0.146 0.146,0.146l1.334,-0c0.081,-0 0.146,-0.066 0.146,-0.146l-0,-1.169Zm-0,-7.784c-0,-0.09 -0.073,-0.163 -0.163,-0.163l-1.3,0c-0.09,0 -0.163,0.073 -0.163,0.163l0,6.351c0,0.09 0.073,0.163 0.163,0.163l1.3,-0c0.09,-0 0.163,-0.073 0.163,-0.163l-0,-6.351Z" style="fill:#{map.get($colors, alert, danger)};"/></svg>';
+```
+
+## Tables
+
+```scss
+$table-responsive-width: 40rem;
+```
+
+## Layout
+
+```scss
+$container-width: 80rem;
+```
+
+## Transition and Animation
+
+```scss
+$transition-duration: 0.15s;
+$transition-timing-function: ease-in-out;
+```
+
+## Character escaping
+
+```scss
+$escaping-characters: (
+  ('<', '%3c'),
+  ('>', '%3e'),
+  ('#', '%23'),
+  ('(', '%28'),
+  (')', '%29'),
+);
+```
