--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -8,5 +8,5 @@ Creating a framework is a complex task, you need a lot of input. You usually don
 
 - [Bootstrap](https://getbootstrap.com/) - It may look strange that we reference Bootstrap here because it a (maybe the biggest) competition of Spruce. The case is, that BS is almost the ultimate truth when it comes to excellent solutions. It a a high standard for us and a great knowledge of us.
 - [Layout patterns](https://web.dev/patterns/layout/) - A good source of modern layout examples. Spruce don't use a grid system and it we don't plan to implement one. We use Flexbox and Grid.
-- [Learn Responsive Desig](https://web.dev/learn/design/) - A great resource for modern responsive development. We loved the "Internationalization" section.
+- [Learn Responsive Design](https://web.dev/learn/design/) - A great resource for modern responsive development. We loved the "Internationalization" section.
 - [Every Layout](https://every-layout.dev/) - A great course on layouts. How to create resopnsive layouts without ```@media``` breakpoints. Although Spruce uses breakpoint we try to reduce their uses as possible.
