Introduction content update

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -7,7 +7,7 @@ description: ''
 
 By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components, but we will manage them under Spruce UI, under a sister project) in it. Although it seems small, it isn’t.
 
-<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. At this point, a lot of things could and will change. We plan to release the first major version in the next 3-6 months.</Notification>
+<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. <strong>At this point, a lot of things missing, could and will change.</strong> We plan to release the first major version in the next 3-6 months.</Notification>
 
 ## Why Make Another CSS Framework?
 
@@ -30,7 +30,7 @@ We are sure everybody uses a CSS system; it can be a complete framework or a set
 - Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system; the UI is your job.
 - Spruce is just a tool. It can help you, but alone it can’t make your code better. You have to do your homework.
 
-## Sure, It Is Opinionated 
+## Sure, It Is Opinionated
 Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
 
 ## We Left the Grid Out
